added the middle inittial

--- a/Lesson3_Assignment/index.html
+++ b/Lesson3_Assignment/index.html
@@ -17,7 +17,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Wyatt Dell</title>
+    <title>Wyatt J. Dell</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
